# chatbot

./: .gitignore  LICENSE  README.md  index.html  nginx-config-example copy.conf  nginx.sh  package.json  proxy.ts  pyproject.toml  requirements.txt  server.py  svelte.config.js  testRagGeneration.ts
Chatbot-API/: bruno.json  chatbot stream.bru  chatbot.bru  create Document.bru  delete documents filtered.bru  delete documents ids.bru  delete documents.bru  get documents.bru  get filtered documents.bru  request RAG copy.bru  request RAG.bru
Chatbot-API/environments/: linode.bru
backend/ai/: agent.py
backend/limiter/: rate_limiter.py
backend/tools/: basic.py  math.py  store.py
backend/vectoreStoreClient/: chromaDBClient.ts  chromaDBclient.py
backend/youtube/: youtubeToText.py
data/: prompts.json  ragData.json
getting-started/: chroma.sqlite3
src/: App.svelte  app.css
src/assets/themes/: prism-atom-dark.css
src/atoms/: BasicDiplayer.svelte  Diplayer.svelte  Footer.svelte  LanguageSelector.svelte  Modal.svelte  Uploader.svelte  VoiceInput.svelte  VoiceOutput.svelte
src/domain/entities/: message.ts  prompt.ts  user.ts
src/domain/values/: pages.ts  users.ts
src/infra/ai/: aiProvider.ts  backend.ts  google.ts  mistral.ts  ollama.ts  openRouter.ts
src/infra/keyboard/: clipBoard.ts
src/infra/storage/: embedding.ts  localStorage.ts
src/lib/: Accueil.svelte  Chatbot.svelte  Document.svelte  Login.svelte  PromptDisplayer.svelte  PromptEditor.svelte  PromptManager.svelte  ProviderManager.svelte  store.ts
